--- a/greeters/mydm-gtk-demo-greeter/Makefile
+++ b/greeters/mydm-gtk-demo-greeter/Makefile
@@ -28,5 +28,5 @@ clean:
 
 install : all
 	mkdir -p $(PREFIX)$(INSTALLDIR)/
-	cp mydm-gtk-demo-greeter deinit mydm-gtk-demo-greeter.glade $(PREFIX)$(INSTALLDIR)/
-	chmod +x $(PREFIX)$(INSTALLDIR)/mydm-gtk-demo-greeter deinit
+	cp mydm-gtk-demo-greeter deinit desktop_run mydm-gtk-demo-greeter.glade $(PREFIX)$(INSTALLDIR)/
+	chmod +x $(PREFIX)$(INSTALLDIR)/mydm-gtk-demo-greeter $(PREFIX)$(INSTALLDIR)/deinit $(PREFIX)$(INSTALLDIR)/desktop_run
